k8s/ingress/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: strip-api
  namespace: worldops

spec:
  stripPrefix:
    prefixes:
      - /api
