k8s/ingress/worldops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: worldops-ingress
  namespace: worldops

  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: worldops-strip-api@kubernetescrd

spec:
  ingressClassName: traefik

  rules:
    - host: worldops2026.duckdns.org

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend
                port:
                  number: 8000
